package liuwei.factoryMethod;

import liuwei.simpleFactory.Product;

/**
 * @Title: Factory
 * @Description: TODO(用一句话描述该文件做什么)
 * @author: caoyue
 * @date: 2020/2/14 22:31
 * @最后修改人: caoyue
 * @最后修改时间: 2020/2/14 22:31
 * @company: shopin.net
 * @version: V1.0
 */

public interface Factory {
    public Product factoryMethod();
}
